[3 - 4단계 방탈출 예약 대기] 히포(권건형) 미션 제출합니다. (#319)
* docs: 추가 예약 대기 기능 설명 및 시나리오 작성

* refactor: Schedule 엔티티 생성 및 연관 기능 리펙터링

* feat: 예약 대기 요청 기능 구현

* feat: 내 예약 확인 시 예약 대기 목록 확인 기능 구현

* feat: 예약 대기 삭제 기능 구현

* feat: 예약 대기 중복 요청 및 내 예약에 대한 대기 요청 검증 기능 추가

* docs: 예약 대기 기능 구현 목록 체크

* feat: admin 예약 대기 목록 조회 기능 구현

* feat: 예약 대기 거절 기능 구현

* feat: 대기열 존재하는 예약인 경우 예약 불가 기능 구현

* feat: 예약 대기 승인 기능 구현

* refactor: 실패 테스트 수정

* refactor: Member Service 계층 리펙터링

- 메서드 내 책임 분리
- @Transactional 적용

* refactor: Member Service 계층 리펙터링

- 메서드 내 책임 분리
- @Transactional 적용

* refactor: Reservation 리펙터링

* refactor: ReservationTime 리펙터링

* refactor: Schedule 리펙터링

* refactor: waiting 리펙터링

* refactor: theme @Transactional 처리

* refactor: Schedule @Transactional 처리

* refactor: Waiting @Transactional 처리

* refactor: ReservationTime @Transactional 처리

* refactor: Reservation @Transactional 처리

* refactor: auth @Transactional 처리

* refactor: Reservation @Transactional 수정

* test: Reservation Test 추가

* test: ReservationTime Test 추가

* test: Schedule Repository Test 추가

* test: Schedule Repository Test 추가

* test: Waiting Test 추가

* refactor: wrapper, primitive type 변경

* refactor: @Repository 제거

* refactor: save() 사용

* refactor: save() 제거 및 createAndSaveSchedule 메서드 명 변경

* refactor: service 계층 메서드 명 변경

* refactor: ScheduleService @Transactional 추가